# 2A

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
cache/: Расчетная ведомость.xlsx
config/: app.conf  config.toml  prod_config.toml
src/application/common/pagination/: __init__.py
src/application/task/commands/: __init__.py  check_task.py  clear_database.py  complete_task.py  create_task.py  delay_task.py  delete_task.py  reject_task.py  upload_file.py
src/application/task/dto/: __init__.py  deleted_task.py  task.py  tasks.py
src/application/task/interfaces/: __init__.py  excel.py  metadata.py  object_storage.py
src/application/task/queries/: __init__.py  get_file.py  get_task_by_code.py  get_task_by_id.py  get_tasks.py  get_tasks_by_username_and_department.py
src/application/user/commands/: __init__.py  login.py
src/application/user/dto/: user.py
src/application/user/interfaces/: __init__.py  id_provider.py
src/domain/task/: exceptions.py
src/domain/task/entities/: __init__.py  task.py
src/domain/user/entities/: user.py
src/infrastructure/: config_loader.py
src/infrastructure/auth/: __init__.py  config.py  id_provider.py  processor.py
src/infrastructure/aws/: __init__.py  config.py  main.py
src/infrastructure/database/: config.py  main.py
src/infrastructure/excel/: main.py  utils.py
src/infrastructure/log/: processors.py
src/infrastructure/metadata/: __init__.py  main.py
src/main/di/: __init__.py  main.py
src/main/mediator/: main.py
src/presentation/api/: __main__.py  config.py  main.py
(+53 files in other folders)
